--- a/join.html
+++ b/join.html
@@ -113,6 +113,14 @@
         <div id="thresholdBar"></div>
     </div>
 
+    <div class="Legend" id="Legend">
+
+        <div class="colour darkpurp"></div>Already Signed
+        <div class="colour lightpurp"></div>Threshold
+        <div class="colour yellow"></div>Maximum
+
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="bundle.js"></script>
 
@@ -231,6 +239,7 @@
                 document.getElementById("proposedMessageBox").innerText = data.msg
                 document.getElementById("ProposedMessageDisplay").style.display = "block"
                 document.getElementById("myProgress").style.display = "block"
+                document.getElementById("Legend").style.display = "flex"
                 document.getElementById("signOrNot").style.display = "block"
             }
 
@@ -391,7 +400,7 @@
     #nameContainer,
     #groupinfobox,
     #ProposedMessageDisplay,
-    #signOrNot,#myProgress {
+    #signOrNot,#myProgress, #Legend {
         display: none;
     }
 
@@ -536,6 +545,34 @@
         z-index: 1;
         transition-duration: 0.4s;
         cursor: pointer;
+    }
+
+    .colour {
+        width: 50px;
+        height: 50px;
+        margin: 5px;
+    }
+
+    .darkpurp {
+        background: #ce6df8;
+    }
+
+    .lightpurp {
+        background: #e0acf7;
+    }
+
+    .yellow {
+        background: #fadb8d;
+    }
+
+    .Legend{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        height: 50px;
+        padding-top: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .emojibutton:hover {
