Add More tesing Materials, Add group verify visual info

--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -432,6 +432,14 @@
 
 
         function displayExisting() {
+
+            //Load Group from file group info 
+            //allow joining where user must import key
+            //reject keys that arent in group
+            //somehow force old order
+
+            //or do threshold verification
+
             document.getElementById("nameContainer").style.display = "block"
             document.getElementById("buttonbox").style.display = "none"
 
