--- a/verify.html
+++ b/verify.html
@@ -161,6 +161,12 @@
         }
 
         function checkSignatureGroup(){
+            loadedKeyArray = []
+            message = ''
+            numberOfSigners = 0
+            thresholdOfSigners = 0
+            aggregateSignature = ''
+            signerIndexes = []
 
             groupInfo = document.getElementById('groupContainer')
             sigInfo = document.getElementById('sigContainer')
@@ -169,8 +175,7 @@
                 return
             }
 
-            splitGroupInfo = groupInfo.innerText.split('\n')
-            splitGroupInfo = splitGroupInfo.split(':')
+            //jsonify group info and siginfo, then process
 
         }
 
@@ -204,19 +209,6 @@
 
             input.click();
         }
-
-        // var message = "This is a test message to sign"
-
-        // var keypair1 = generateNewKeypair()
-        // signature1 = signArbMessage(keypair1.privKey, message)
-
-        // var keypair2 = generateNewKeypair()
-        // signature2 = signArbMessage(keypair2.privKey, message)
-
-        // aggerateSig = aggregateSignature([signature1, signature2])
-        // aggregateKey = aggregateKeys([keypair1.pubKey, keypair2.pubKey])
-
-        // answer = checkSignature(aggerateSig, aggregateKey, message)
 
     </script>
 
